Chromium: Show a "Playback Disabled" button on media error. https://bugs.webkit.org/show_bug.cgi?id=28196 Use a disabled play button when the media file cannot be played.

Patch by Kyle Prete <kylep@chromium.org> on 2009-08-13
Reviewed by Dave Levin.

No new tests needed. Covered by LayoutTests/media/video-empty-source.html

* rendering/RenderThemeChromiumSkia.cpp:
(WebCore::RenderThemeChromiumSkia::paintMediaPlayButton):

Canonical link: https://commits.webkit.org/38848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47247 268f45cc-cd09-0410-ab3c-d52691b4dbfc